--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 config.json
 newrelic_agent.log
 maintenance/index.html
+maintenance/css/vars.css
 common/index.ts
 common/js/
 web/dist/
