--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "outDir": "js"
+    "outDir": "js",
+    "noImplicitAny": false
   },
   "include": ["src/**/*"]
 }
